--- a/WebGL_Shaders.html
+++ b/WebGL_Shaders.html
@@ -6,17 +6,20 @@
     <style>
         html {
             height: 100%;
+            width: 100%;
         }
         body {
+            overflow: hidden;
             height: 100%;
+            width: 100%;
             margin: 0;
         }
         .container {
             position: absolute;
             left: 10px;
             top: 10px;        
-            width: 75px;
-            background-color: #aeadad;
+            width: 95px;
+            background-color: rgb(235, 235, 235);
             border-radius: 10px;
             padding: 10px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
@@ -27,8 +30,8 @@
             margin-bottom: 5px;
             border: none;
             border-radius: 5px;
-            background-color: #494949;
-            color: #fff;
+            background-color: rgb(82, 82, 82);
+            color: rgb(235, 235, 235);
             cursor: pointer;
             transition: background-color 0.3s ease;
         }
@@ -36,27 +39,28 @@
             margin-bottom: 0;
         }
         .btn:hover {
-            background-color: #7d7d7d;
+            background-color: rgb(70, 70, 70);
         }
         .circle-btn {
-            width: 60px; /* Adjust size as needed */
-            height: 60px; /* Adjust size as needed */
+            width: 35px; /* Adjust size as needed */
+            height: 35px; /* Adjust size as needed */
             border-radius: 50%;
-            background-color: #494949; /* Button color */
-            color: #fff; /* Text color */
-            font-size: 24px; /* Adjust font size as needed */
-            line-height: 60px; /* Adjust line-height to match the button height */
+            background-color: rgb(82, 82, 82); /* Button color */
+            color: rgb(235, 235, 235); /* Text color */
+            font-size: 10px; /* Adjust font size as needed */
+            line-height: 30px; /* Adjust line-height to match the button height */
             border: none;
             cursor: pointer;
             display: flex;
             justify-content: center;
             align-items: center;
+            margin-left: 20px;
             outline: none; /* Remove focus outline */
             transition: background-color 0.3s ease;
         }
 
         .circle-btn:hover {
-            background-color: #7d7d7d; /* Button color on hover */
+            background-color: rgb(70, 70, 70); /* Button color on hover */
         }
     </style>
 </head>
@@ -65,7 +69,7 @@
     <div class="container">
         <button class="btn" onclick="changeShader('ribbons')">Ribbons</button>
         <button class="btn" onclick="changeShader('orb')">Orb</button>
-        <button class="circle-btn">&#60;&#47;&#62;</button>
+        <button class="circle-btn" onclick="location='https://github.com/dansh0/webgl-fragment-shaders'">&#60;&#47;&#62;</button>
 
         <!-- <button class="btn" onclick="changeShader('flakes')">Flakes</button> -->
     </div>
@@ -352,19 +356,14 @@
             gl_FragColor = vec4(col,1.0);
         }
     </script>
-    <!-- <script id="fragmentShader" type="x-shader/x-fragment">
-        precision mediump float;
-        varying vec2 vUv;
-        uniform float uTime;
-        void main() {
-            gl_FragColor = vec4(vUv.x+uTime/10000., vUv.y, 0, 1);  // red
-        }
-    </script> -->
     <script>
         const canvas = document.getElementById('webglCanvas')
         const gl = canvas.getContext('webgl')
-        canvas.style.height = '100%'
-        canvas.style.width = '100%'
+        let topBar = 0
+        let width = window.innerWidth
+        let height = window.innerHeight
+        canvas.style.height = height-topBar + 'px'
+        canvas.style.width = width + 'px'
         canvas.width = canvas.clientWidth // resize to client canvas
         canvas.height = canvas.clientHeight // resize to client canvas
 
@@ -467,11 +466,14 @@
             currentProgram = shaderName
             gl.useProgram(programs[currentProgram])
 
-            let resUniformLocation = gl.getUniformLocation(programs[currentProgram], "uResolution")
-            gl.uniform2f(resUniformLocation, canvas.width, canvas.height)
+            window.dispatchEvent(new Event('resize'));
         } 
 
         window.addEventListener("resize", () => {
+            let width = window.innerWidth
+            let height = window.innerHeight
+            canvas.style.height = height-topBar + 'px'
+            canvas.style.width = width + 'px'
             canvas.width = canvas.clientWidth // resize to client canvas
             canvas.height = canvas.clientHeight // resize to client canvas
             let resUniformLocation = gl.getUniformLocation(programs[currentProgram], "uResolution")
